# facebook-app

./: README.md  pyproject.toml
app/: config.py  main.py
app/api/: router.py
app/api/endpoints/: posts.py
services/: facebook.py
