[tool.poetry]
name = "facebook-app"
version = "0.1.0"
description = ""
authors = ["dean.mcdonald <dean.mcdonald@eigentech.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
facebook-scraper = "^0.2.59"
fastapi-pagination = "^0.10.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
